--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.1.0",
-    "homepage": "https://github.com/thareshjose/movie-watchlist-creator",
+    "homepage": "https://thareshjose.github.io/movie-watchlist-creator/",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
